Revert "fix centering for header img on mobile"
This reverts commit 681bfe7aa6cfa64fe4f43de4724e9a27f23c5c82.

--- a/_sass/layouts/_index.scss
+++ b/_sass/layouts/_index.scss
@@ -5,7 +5,6 @@
   width: 100%;
   background-color:$header-desc-background-color;
   background-size: cover;
-  background-position-x: center;
   font-size: 1.2em;
   text-align: center;
   color: $header-desc-text-color;
